Closed Bug 1373067 Opened 7 years ago Closed 7 years ago

Ensure CC isn't started too often

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 + fixed
firefox56 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

(Depends on 1 open bug)

Details

Attachments

(1 file)

Attached patch cc_delay.diffSplinter Review
Looks like bug 1367905 regressed how often we run CC. That happened because the overall time from first forget skippable to that last cc slice got a lot shorter since there just is plenty of idle time.

But, I think we could try to reduce the frequency back to where it was, or around it.


remote: Follow the progress of your build on Treeherder:
remote:   https://treeherder.mozilla.org/#/jobs?repo=try&revision=c1fab0b9be1855afeb0302c59720940a85affcea
remote: 
remote: It looks like this try push has talos jobs. Compare performance against a baseline revision:
remote:   https://treeherder.mozilla.org/perf.html#/comparechooser?newProject=try&newRevision=c1fab0b9be1855afeb0302c59720940a85affcea
[Tracking Requested - why for this release]:
Running CC too often may cause too much cpu usage.
Attachment #8877772 - Flags: review?(continuation)
Attachment #8877772 - Flags: review?(continuation) → review+
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/39440a5e63df
Ensure CC isn't started too often, r=mccr8
https://hg.mozilla.org/mozilla-central/rev/39440a5e63df
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment on attachment 8877772 [details] [diff] [review]
cc_delay.diff

Approval Request Comment
[Feature/Bug causing the regression]: bug 1367905
[User impact if declined]: possibly too high cpu usage
[Is this code covered by automated tests?]: not tests, but telemetry
[Has the fix been verified in Nightly?]: manually
[Needs manual test from QE? If yes, steps to reproduce]: no 
[List of other uplifts needed for the feature/fix]: NA
[Is the change risky?]: shouldn't be too risky
[Why is the change risky/not risky?]: Before bug 1367905 we used timers to run cycle collector and that slowed down its processing. Now that we use idle time when available, processing happens sooner, so need to manually postpone the work a bit. The risk is that are we postponing it too much. This is yet another scheduling change which may affect to random talos numbers.
[String changes made/needed]: NA
Attachment #8877772 - Flags: approval-mozilla-beta?
Comment on attachment 8877772 [details] [diff] [review]
cc_delay.diff

tweak cc delay, beta55+, should be in 55.0b3

This is early in the beta cycle so we can hopefully find out about fallout before going to release.
Attachment #8877772 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: