Bug 1373067 - Ensure CC isn't started too often. r=mccr8, a=jcristau

--HG--
extra : source : 39440a5e63dfe32c913ad435706123e6ccf5723b