dom/base/nsJSEnvironment.cpp
@@ -2236,6 +2236,11 @@ nsJSContext::MaybePokeCC()
     return;
   }
 
+  uint32_t sinceLastCCEnd = TimeUntilNow(sLastCCEndTime);
+  if (sinceLastCCEnd && sinceLastCCEnd < NS_CC_DELAY) {
+    return;
+  }
+
   if (ShouldTriggerCC(nsCycleCollector_suspectedCount())) {
     sCCRunnerFireCount = 0;
 
